lab 7 has both table working

--- a/lab7/RazorPagesMovie/appsettings.json
+++ b/lab7/RazorPagesMovie/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "RazorPagesMovieContext": "Server=(localdb)\\mssqllocaldb;Database=RazorPagesMovieContext-a8f7c3e8-3cfb-4f17-a9ed-fbe0c995386e;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
