--- a/project/Final Project/ReadingListManager/appsettings.json
+++ b/project/Final Project/ReadingListManager/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-ReadingListManager-53bc9b9d-9d6a-45d4-8429-2a2761773502;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-ReadingListManager-53bc9b9d-9d6a-45d4-8429-2a2761773502;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "ReadingListManagerContext": "Server=(localdb)\\mssqllocaldb;Database=ReadingListManagerContext-25590386-0c40-4032-b061-dc0310fff504;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
